--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
   },
   "dependencies": {
     "express": "~3.4.4",
-    "mongoose": "^4.5.8"
+    "mongoose": "^4.5.8",
+    "q": "^1.4.1"
   },
   "devDependencies": {},
   "bundleDependencies": [],
